# rustlib

./: .gitignore  Cargo.toml  makefile
src/: main.rs  main.rs.slice  main.rs1
src/func/: mod.rs
src/func/def/: def.rs
src/os/: memory.rs  mod.rs
src/os/fs/: mod.rs  watch.rs
src/slice/: def_destruct.rs  def_slice.rs  def_tuple.rs  mod.rs
src/spec/: mod.rs
src/spec/expr/: borrow.rs  borrow_return.rs  expr_flow.rs  mod.rs
src/spec/func/: def_return.rs  error.rs  mod.rs
src/spec/generic/: generic.rs  mod.rs  traits.rs  traits_obj.rs  traits_type.rs
src/spec/lifetime/: lifetime.rs  mod.rs
src/spec/macro1/: macro_match.rs  mod.rs
src/spec/object/: enum_def.rs  enum_impl_list.rs  enum_match.rs  match_destructuring.rs  mod.rs  struct_def.rs
src/spec/object/collection/: hashmap.rs  mod.rs  vector.rs
src/spec/object/implement/: impl_method.rs  mod.rs
src/spec/object/slice/: def_destruct.rs  def_slice.rs  def_tuple.rs  mod.rs  slice_func.rs
src/str/: mod.rs  str_def.rs  str_def_change.rs  str_func.rs  str_parse.rs
src/str/fmt/: format_test.rs  println.rs
src/unittest/: foo.rs  foo_test.rs  mod.rs
src/var/: def.rs  mod.rs  var.rs  var_def.rs  var_num.rs
src/var/fmt/: format_test.rs  mod.rs  print_format_test.rs  println.rs
str/fmt/: format.rs  println.rs
