[package]
name = "myrustlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0" # use num::complex::Complex;
rand = "0.8.5"
notify = "=5.0.0"
libc = "0.2"

[[bin]]
name = "net_rst"
path = "src/bin/net/rst.rs"
